<resources translatable="false">
    <string name="actual_volume">实际加液体积/μL</string>
    <string name="add">添加</string>
    <string name="add_liquid">加液</string>
    <string name="app_name">全自动梯度混合仪</string>
    <string name="bar">导航栏</string>
    <string name="before_volume">预计加液体积/μL</string>
    <string name="button">Button</string>
    <string name="calibration_name">校准程序名</string>
    <string name="check_update">检查更新</string>
    <string name="checked">选中</string>
    <string name="current_version">当前软件版本</string>
    <string name="custom_disable">自定义：关</string>
    <string name="device">设备信息</string>
    <string name="drainage">排液</string>
    <string name="fill">填充</string>
    <string name="hint_acceleration">加速（10–100）</string>
    <string name="hint_deceleration">减速（10–100）</string>
    <string name="hint_speed">转速（r/min）</string>
    <string name="hint_wait_time">等待时间（ms）</string>
    <string name="input_v1">泵一加液量 μL</string>
    <string name="input_v2">泵二加液量 μL</string>
    <string name="input_v3">泵三加液量 μL</string>
    <string name="input_v4">泵四加液量 μL</string>
    <string name="input_x">X轴坐标</string>
    <string name="input_y">Y轴坐标</string>
    <string name="mode">模式</string>
    <string name="motor_distance">移动距离/转</string>
    <string name="motor_setting">电机设置</string>
    <string name="move">移动</string>
    <string name="needle_space">针头间距</string>
    <string name="notice_content">1. 执行程序前请确认有充足的溶液。\n2. 程序结束后请及时清理容器，避免滋生微生物等问题。\n3. 请阅读说明书后使用，避免误操作。</string>
    <string name="operate">操作</string>
    <string name="order">序号</string>
    <string name="parameter_adjustment">参数调整</string>
    <string name="plate_four">四号板</string>
    <string name="plate_one">一号板</string>
    <string name="plate_three">三号板</string>
    <string name="plate_two">二号板</string>
    <string name="program_name">程序名</string>
    <string name="pump_four">泵四</string>
    <string name="pump_name">泵名</string>
    <string name="pump_one">泵一</string>
    <string name="pump_three">泵三</string>
    <string name="pump_two">泵二</string>
    <string name="recycle">回收</string>
    <string name="reset">复  位</string>
    <string name="rest">下位机复位</string>
    <string name="save">保存</string>
    <string name="save_config">保存配置</string>
    <string name="select_all">全选</string>
    <string name="setting">参数调整</string>
    <string name="size">规格:</string>
    <string name="start">开 始</string>
    <string name="start_time">开始时间</string>
    <string name="status">状态</string>
    <string name="stop">停 止</string>
    <string name="subdivision">细分</string>
    <string name="suck_back">回吸</string>
    <string name="suspend">暂 停</string>
    <string name="switch_function">功能选择</string>
    <string name="test">测试</string>
    <string name="text">Text</string>
    <string name="title_adjust">管理员</string>
    <string name="title_admin">管理员</string>
    <string name="title_calibration">校准管理</string>
    <string name="title_calibration_data">校准数据</string>
    <string name="title_container">容器管理</string>
    <string name="title_dashboard">流程监控</string>
    <string name="title_home">主界面</string>
    <string name="title_log">日志</string>
    <string name="title_program">分液程序</string>
    <string name="title_program_edit">程序编辑页面</string>
    <string name="to_web">产品网站</string>
    <string name="update">升级</string>
    <string name="volume_input">加液量编辑</string>
    <string name="wash">管路清洗</string>
    <string name="wash_tank">洗涤液</string>
    <string name="wash_tank_move">TO 洗涤液</string>
    <string name="wash_time">清洗时间/秒</string>
    <string name="waste_tank">废液槽</string>
    <string name="waste_tank_move">TO 废液槽</string>
    <string name="wifi_setting">WIFI设置</string>
    <string name="work_edit">加液程序编辑</string>
    <string name="work_hole">孔位编辑</string>
    <string name="work_name">加液程序名</string>
    <string name="work_plate">加液板编辑</string>
    <string name="y_motor">Y轴</string>
    <string name="z_motor">Z轴</string>
    <string name="about">使用说明</string>
    <string name="heigh_move">移动高度</string>
    <string name="heigh_add">加液高度</string>
    <string name="position_input">坐标调整</string>
</resources>