<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zktony.www.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_container"
        android:name="com.zktony.www.ui.container.ContainerFragment"
        android:label="@string/title_container"
        tools:layout="@layout/fragment_container" >
        <action
            android:id="@+id/action_navigation_container_to_navigation_container_edit"
            app:destination="@id/navigation_container_edit"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_navigation_container_to_navigation_wash"
            app:destination="@id/navigation_wash"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_wash"
        android:name="com.zktony.www.ui.container.WashFragment"
        android:label="@string/title_container"
        tools:layout="@layout/fragment_wash">
        <action
            android:id="@+id/action_navigation_wash_to_navigation_container"
            app:destination="@id/navigation_container"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_container_edit"
        android:name="com.zktony.www.ui.container.ContainerEditFragment"
        android:label="@string/title_container"
        tools:layout="@layout/fragment_container_edit">
        <action
            android:id="@+id/action_navigation_container_edit_to_navigation_container"
            app:destination="@id/navigation_container"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_program"
        android:name="com.zktony.www.ui.program.ProgramFragment"
        android:label="@string/title_program"
        tools:layout="@layout/fragment_program">
        <action
            android:id="@+id/action_navigation_program_to_navigation_program_edit"
            app:destination="@id/navigation_program_edit"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_program_edit"
        android:name="com.zktony.www.ui.program.ProgramEditFragment"
        android:label="@string/title_program"
        tools:layout="@layout/fragment_program_edit">
        <action
            android:id="@+id/action_navigation_program_edit_to_navigation_program"
            app:destination="@id/navigation_program"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>


    <fragment
        android:id="@+id/navigation_log"
        android:name="com.zktony.www.ui.log.LogFragment"
        android:label="@string/title_log"
        tools:layout="@layout/fragment_log" />

    <fragment
        android:id="@+id/navigation_admin"
        android:name="com.zktony.www.ui.admin.AdminFragment"
        android:label="@string/title_admin"
        tools:layout="@layout/fragment_admin">
        <action
            android:id="@+id/action_navigation_admin_to_navigation_motor"
            app:destination="@id/navigation_motor"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_motor"
        android:name="com.zktony.www.ui.admin.MotorFragment"
        android:label="@string/title_adjust"
        tools:layout="@layout/fragment_motor">
        <action
            android:id="@+id/action_navigation_motor_to_navigation_admin"
            app:destination="@id/navigation_admin"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calibration"
        android:name="com.zktony.www.ui.calibration.CalibrationFragment"
        android:label="@string/title_calibration"
        tools:layout="@layout/fragment_calibration">
        <action
            android:id="@+id/action_navigation_calibration_to_navigation_calibration_data"
            app:destination="@id/navigation_calibration_data"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_calibration_data"
        android:name="com.zktony.www.ui.calibration.CalibrationDataFragment"
        android:label="@string/title_calibration_data"
        tools:layout="@layout/fragment_calibration_data">
        <action
            android:id="@+id/action_navigation_calibration_data_to_navigation_calibration"
            app:destination="@id/navigation_calibration"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

</navigation>