<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/dark_onBackground"
        android:orientation="vertical"
        tools:context=".ui.program.ProgramFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@color/light_onPrimary"
                android:gravity="center"
                android:text="@string/order"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="4"
                android:background="@color/light_onPrimary"
                android:gravity="center"
                android:text="@string/program_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:background="@color/dark_secondary"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/light_onPrimary"
                android:textSize="18sp"
                app:icon="@mipmap/plus"
                app:iconGravity="textStart"
                app:iconSize="24dp"
                app:rippleColor="#6200EA"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <ImageView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/empty"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="ContentDescription" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/dark_onBackground"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            tools:listitem="@layout/item_program" />

    </LinearLayout>

</layout>