<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/dark_onBackground"
        android:orientation="vertical"
        tools:context=".ui.program.ProgramEditFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/light_onPrimary"
            tools:ignore="TextSizeCheck">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/left"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:text="@string/title_program_edit"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/light_onPrimary">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="196dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/button"
                android:textSize="18sp"
                app:cornerRadius="0dp"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toTopOf="@+id/gradient_plate"
                app:layout_constraintStart_toStartOf="@+id/gradient_plate"
                app:rippleColor="@color/purple_700"
                app:strokeColor="@color/light_primary"
                app:strokeWidth="2dp"
                tools:ignore="NestedWeights,VisualLintButtonSize,DuplicateSpeakableTextCheck,VisualLintBounds" />

            <com.zktony.core.widget.GradientPlate
                android:id="@+id/gradient_plate"
                android:layout_width="640dp"
                android:layout_height="320dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="VisualLintBounds" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_all"
                android:layout_width="196dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:text="@string/select_all"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toTopOf="@+id/gradient_plate"
                app:layout_constraintEnd_toEndOf="@+id/gradient_plate"
                app:rippleColor="@color/purple_700"
                tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize,VisualLintBounds" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/volume"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="640dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:text="@string/button"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="@+id/gradient_plate"
                app:layout_constraintStart_toStartOf="@+id/gradient_plate"
                app:layout_constraintTop_toBottomOf="@+id/gradient_plate"
                app:rippleColor="@color/purple_700"
                app:strokeColor="@color/light_primary"
                app:strokeWidth="2dp"
                tools:ignore="TextContrastCheck,VisualLintButtonSize,VisualLintBounds" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</layout>